--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,21 +14,22 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <form class="form-signin" method="post" action="/login">
-        <h2 class="form-signin-heading">Please Login</h2>
-        <p>
-            <label for="username" class="sr-only">Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
-        </p>
-        <p>
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
-        </p>
-        <p>
-            Remember me <input type="checkbox" id="remember-me" name="remember-me" style="margin-left: 10px;margin-top: 5px">
-        </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-    </form>
-</div>
-</body></html>
+    <div class="container">
+        <form class="form-signin" method="post" action="/login">
+            <h2 class="form-signin-heading">Please Login</h2>
+            <p>
+                <label for="username" class="sr-only">Username</label>
+                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+            </p>
+            <p>
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+            </p>
+            <p>
+                Remember me <input type="checkbox" id="remember-me" name="remember-me" style="margin-left: 10px;margin-top: 5px">
+            </p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </form>
+    </div>
+</body>
+</html>
